# codingdojo-cpp

./: CMakeLists.txt  Jamroot.jam  README.md
lib/gmock/: README.md
src/main/: DummyClass.cpp  DummyClass.h
src/test/: DummyTest.cpp
